--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "amazon-cognito-identity-js": "^6.3.15",
+    "axios": "^1.11.0",
     "buffer": "^6.0.3",
     "lucide-react": "^0.536.0",
     "process": "^0.11.10",
